--- a/tables.html
+++ b/tables.html
@@ -17,24 +17,24 @@
             <td>3456</td>
         </tr>
         <tr>
-            <td>Ros</td>
-            <td>3456</td>
+            <td>max</td>
+            <td>3856</td>
         </tr>
         <tr>
-            <td>Rose</td>
-            <td>3456</td>
+            <td>Riley</td>
+            <td>3956</td>
         </tr>
         <tr>
-            <td>Rose</td>
-            <td>3456</td>
+            <td>mosse</td>
+            <td>3486</td>
         </tr>
         <tr>
-            <td>Rose</td>
-            <td>3456</td>
+            <td>luel</td>
+            <td>34006</td>
         </tr>
         <tr>
-            <td>Rose</td>
-            <td>3456</td>
+            <td>sydney</td>
+            <td>3226</td>
         </tr>
 
 </body>
