--- a/tables.html
+++ b/tables.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="13" bgcolor="navyblue">
+    <table border="13" bgcolor="pink">
         <tr>
             <th>Name</th>
             <th>IDNumber</th>
